# radiant-voices

./: .editorconfig  .gitignore  .isort.cfg  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .readthedocs.yml  .travis.yml  ARCHITECTURE.rst  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  conftest.py  genrv-config.yaml  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  sunvox.dylib  tox.ini  tsconfig.json  watchfiledump-left.sh  watchfiledump-right.sh  watchfiledump.sh
.github/: FUNDING.yml
.github/workflows/: javascript-tests.yml  pre-commit.yml  publish-to-test-pypi.yml  publish.yml  python-tests.yml
docs/: Makefile  architecture.rst  conf.py  index.rst  installation.rst  introduction.rst  maintenance.rst  make.bat  requirements.txt  sunvox-file-format.rst
docs/api-reference/: index.rst  rv.modules.rst  rv.rst
examples/: helloworld.py
examples/python/: helloworld.py
examples/rv-react-ts-example/: package.json  tsconfig.json
examples/typescript/: package-lock.json  package.json  tsconfig.json
requirements/: base.txt  docs.txt  tests.txt  tools.txt
rv/: __init__.py  api.py  cmidmap.py  container.py  controller.py  errors.py  fileformat.yaml  module.py  note.py  option.py  pattern.py  project.py  sunvox.h  sunvox.py  synth.py  writers.py
rv/chunks/: __init__.py  array.py  chunk.py  curve.py  dirty.py  dirtywaveform.py  waveform.py
rv/lib/: conversions.py  delegator.py  iff.py  validators.py
rv/modules/: __init__.py  amplifier.py  analoggenerator.py  compressor.py  dcblocker.py  delay.py  distortion.py  drumsynth.py  echo.py  eq.py  feedback.py  filter.py  filterpro.py  flanger.py  fm.py  generator.py  glide.py  gpio.py  input.py  kicker.py  lfo.py  loop.py  meta.py  metamodule.py  modulator.py  module.py  multictl.py  multisynth.py  output.py  pitch2ctl.py  pitchshifter.py  reverb.py  sampler.py  sound2ctl.py  spectravoice.py  unsupported.py  velocity2ctl.py  vibrato.py  vocalfilter.py  vorbisplayer.py  (+1 more)
rv/reader/: __init__.py  chunks.py  readsunvoxfile.py
rv/readers/: initial.py  module.py  pattern.py  reader.py  sunsynth.py  sunvox.py
rv/structure/: controller.py  module.py  pattern.py  project.py  sunsynthfile.py  sunvoxfile.py
rv/tools/: export.py  filedump.py  patch_decompiler.py  player.py  rendiff.py  serialise.py
rvoxgen/: __init__.py  codegen.py  config.yaml  fileformat.yaml
rvoxgen/jsimmutable/: __init__.py  gen.py
rvoxgen/jsmutable/: __init__.py  gen.py
rvoxgen/piximutable/: __init__.py  gen.py
rvoxgen/pyimmutable/: __init__.py  gen.py
rvoxgen/pymutable/: __init__.py  base_module.py.jinja2  gen.py
rvoxgen/tools/: generate.py
specs/: fileformat.yaml  mutations.yaml
src/ts/: color.ts  containers.ts  controllerMidiMap.ts  conversions.ts  effect.ts  index.ts  links.ts  moduleDataChunk.ts  note.ts  pattern.ts  project.ts  sunVoxVersion.ts  synth.ts
test/reader/: test_empty.py
tests/docs/: test_module_docstrings.py
tests/files/: amplifier.sunsynth  analog-generator.sunsynth  compressor.sunsynth  dc-blocker.sunsynth  delay.sunsynth  distortion.sunsynth  drum-synth.sunsynth  (+45 more)
(+691 files in other folders)
