[project]
name = "radiant-voices"
version = "2.0.0.2.1.2.1"
description = "Create, read, modify, and write SunVox files."
readme = "README.rst"
authors = [
    { name = "Matthew Scott", email = "matt@11craft.com" }
]
requires-python = ">=3.9"
dependencies = [
    "attrs>=22.2.0",
    "python-slugify>=8.0.1",
    "logutils>=0.3.5",
    "networkx>=3.0",
]

[project.optional-dependencies]
tools = [
    "numpy>=1.24.2",
    "scipy>=1.9.3",
    "sunvox-dll-python>=0.3.6.2.1.2.1",
    "tqdm>=4.64.1",
    "rich>=13.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/rv"]

[dependency-groups]
dev = [
    "hexdump>=3.3",
    "pytest>=7.2.1",
    "pytest-watch>=4.2.0",
    "numpy>=1.24.2",
    "pytest-xdist>=3.6.1",
]
docs = [
    "plantweb>=1.2.1",
    "sphinx>=6.1.3",
    "sphinx_rtd_theme>=1.2.0",
]
genrv = [
    "PYYAML>=6.0",
    "jinja2>=3.1.2",
    "black>=23.1.0",
    "isort>=5.12.0",
    "stringcase>=1.2.0",
]
