[project]
name = "radiant-voices"
version = "2.0.0.2.1.2.1"
description = "Create, read, modify, and write SunVox files."
readme = "README.rst"
authors = [
    { name = "Matthew Scott", email = "matt@11craft.com" }
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.1.0",
    "python-slugify>=8.0.4",
    "logutils>=0.3.5",
    "networkx>=3.4.2",
]

[project.optional-dependencies]
tools = [
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "sunvox-dll-python>=0.3.6.2.1.2.1",
    "tqdm>=4.67.1",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/rv"]

[dependency-groups]
dev = [
    "hexdump>=3.3",
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
    "numpy>=2.2.3",
    "pytest-xdist>=3.6.1",
]
docs = [
    "plantweb>=1.2.1",
    "sphinx>=8.2.1",
    "sphinx_rtd_theme>=3.0.2",
]
genrv = [
    "pyyaml>=6.0.2",
    "jinja2>=3.1.5",
    "black>=25.1.0",
    "isort>=6.0.0",
    "stringcase>=1.2.0",
]
